# Lidar_CoreV3_Motor_GUI

./: UPDATELOG.md  index.html  package.json  pnpm-lock.yaml
.github/build-for-linux/: action.yml  build.sh  entrypoint.sh
.github/workflows/: release.yml  updater.yml
scripts/: portable.mjs  updatelog.mjs  updater.mjs
src/: App.vue  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cmds.rs  logger.rs  main.rs
src-tauri/src/motor/: apis.rs  mod.rs  startupTest.rs  startup_test.rs  upgrade.rs
src-tauri/src/tools/: mod.rs  relay.rs  utils.rs
src-tauri/src/ymodem/: mod.rs  xymodem_util.rs  ymodem.rs
src/api/: cmds.js
src/assets/iconfont/: iconfont.js
src/components/: DownloadDialog.vue  FwMergeDialog.vue  MarkdownDisplay.vue  MotorPosGuage.vue  MotorSpecialParamsDialog.vue  PageBase.vue  SpeedMeter.vue  TitleBar.vue  UpdataFwDialog.vue  UploadDialog.vue  appUpdateDialog.vue  cardBase.vue
src/components/iconfont/: SvgIcon.vue
src/locals/: en.js  index.js  zh.js
src/router/: index.js
src/stores/: appUpdateInfo.js  motorState.js
src/utils/: cmds.js  parseErrorCode.js
src/views/: Motor_main.vue  Setting.vue  Speed_monitor.vue  Stress_test.vue
