[package]
name = "lidar_corev3_motor_gui"
version = "0.0.1"
description = "A Motor Control App"
authors = ["calvin.liu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "updater", "window-maximize", "window-minimize", "window-close", "window-unminimize", "window-hide", "window-unmaximize", "window-start-dragging", "window-show", "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
anyhow ="1"
serde_json = "1"
serialport = "4.3"
once_cell = "1.19"
csv = "1.3.0"
libm = "0.2.8"
log = "0.4.21"
chrono = "0.4.38"
crc = "3.2.1"
crc16 = "0.4.0"
serde_yaml = "0.9"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
